<resources>
    <string name="app_name">光谷社区</string>
    <string name="menu_home_page">首页</string>
    <string name="menu_search">搜索</string>
    <string name="menu_me">我</string>
    <string name="loading">加载中</string>
    <string name="post_title">标题</string>
    <string name="post_content">内容</string>
    <string name="name">姓名</string>
    <string name="comment_content">评论内容</string>
    <string name="welcome">欢迎</string>
    <string name="login">登陆</string>
    <string name="form_password">请输入密码</string>
    <string name="form_username">请输入账号</string>
    <string name="post_read_count">阅读%1$s</string>
    <string name="post_comment_count">评论%1$s</string>
    <string name="post_like_count">喜欢%1$s</string>
    <string name="right_now">刚刚</string>
    <string name="welcome_to_gg_community">欢迎来到光谷社区 Guanggoo.com—源自光谷的交流分享社区</string>
    <string name="close_and_go_back">关闭并且回退</string>
    <string name="post_click_count">%1$s次点击</string>
    <string name="city_construction">城市建设</string>
    <string name="x_floor">%1$s楼</string>
    <string name="id">ID: %1$s</string>
    <string name="email">Email: %1$s</string>
    <string name="topic">我的主题</string>
    <string name="reply">我的回复</string>
    <string name="favourite">我的收藏</string>
    <string name="credit">我的信用</string>
    <string name="settings">设置</string>
    <string name="title_activity_login">登陆</string>

    <!-- Strings related to login -->
    <string name="prompt_email">邮箱</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登陆</string>
    <string name="action_sign_in_short">登陆</string>
    <string name="error_invalid_email">邮箱地址无效</string>
    <string name="error_invalid_password">密码不少于４位数</string>
    <string name="error_incorrect_password">账号或密码不正确</string>
    <string name="error_field_required">必填</string>
    <string name="permission_rationale">邮箱自动填写需要开启"通讯录"权限</string>
    <string name="login_please">请登录账号</string>
    <string name="send">发送</string>
    <string name="reply_to_author">回复</string>
    <string name="photo">头像</string>
    <string name="username">用户名</string>
    <string name="email_address">邮箱</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="app_tag_line">欢迎来到光谷社区</string>
    <string name="app_name_2">agg</string>
    <string name="share">分享</string>
    <string name="my_avatar">我的头像</string>
    <string name="history">最近浏览</string>
    <string name="info_page">个人主页</string>
    <string name="info_detail">详细信息</string>
    <string name="zero">0</string>
    <string name="count_topic">主题</string>
    <string name="count_reply">回复</string>
    <string name="count_favourite">收藏</string>
    <string name="count_credit">信用</string>
    <string name="detail_id">Id</string>
    <string name="detail_id_content">guanggoo</string>
    <string name="detail_email">邮箱</string>
    <string name="detail_reg">注册时间</string>
    <string name="join_time">加入时间%1$s，第%2$s位成员．</string>
    <string name="his_topic">Ta 的主题</string>
    <string name="his_reply">Ta 的回复</string>
    <string name="his_fav">Ta 的收藏</string>
</resources>
