<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/topic_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground"
    android:orientation="vertical"
    android:padding="@dimen/default_padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/topic_last_touched"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/right_now"
            android:textSize="12sp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/topic_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/post_item_inner_margin"
        android:gravity="center_vertical"
        android:text="@string/welcome_to_gg_community"
        android:textColor="@color/black"
        android:textSize="18sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/post_item_inner_margin"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/topic_reply_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post_comment_count"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/topic_read_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/post_item_inner_margin"
            android:text="@string/post_read_count"
            android:textSize="12sp"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/topic_like_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/post_item_inner_margin"
            android:text="@string/post_like_count"
            android:textSize="12sp"
            android:visibility="gone"/>
    </LinearLayout>
</LinearLayout>
