<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_8"
        android:layout_marginTop="@dimen/margin_8"
        android:background="@color/white"
        android:elevation="2dp"
        android:orientation="vertical"
        android:padding="@dimen/margin_16">

        <TextView
            android:id="@+id/id_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_16"
            android:text="@string/detail_id"/>

        <TextView
            android:id="@+id/id_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_id_content"
            android:textColor="@color/black"
            android:textSize="18sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_8"
        android:layout_marginTop="@dimen/margin_8"
        android:background="@color/white"
        android:elevation="2dp"
        android:orientation="vertical"
        android:padding="@dimen/margin_16">

        <TextView
            android:id="@+id/email_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_16"
            android:text="@string/detail_email"/>

        <TextView
            android:id="@+id/email_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="guanggoo@guanggoo.com"
            android:textColor="@color/black"
            android:textSize="18sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_8"
        android:layout_marginTop="@dimen/margin_8"
        android:background="@color/white"
        android:elevation="2dp"
        android:orientation="vertical"
        android:padding="@dimen/margin_16">

        <TextView
            android:id="@+id/register_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_16"
            android:text="@string/detail_reg"/>

        <TextView
            android:id="@+id/register_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/join_time"
            android:textColor="@color/black"
            android:textSize="18sp"/>
    </LinearLayout>
</LinearLayout>