<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/preview_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="@dimen/default_padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/preview_avatar"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:contentDescription="@string/my_avatar"/>

        <TextView
            android:id="@+id/preview_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/post_item_inner_margin"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/preview_create_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/post_item_inner_margin"
            android:text="@string/right_now"
            android:textSize="12sp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/preview_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_padding"
        android:lineSpacingMultiplier="1.1"
        android:text="@string/welcome_to_gg_community"
        android:textColor="@color/black"
        android:textSize="22sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_padding"
        android:layout_marginTop="@dimen/post_item_inner_margin"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/preview_click_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/post_click_count"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/preview_fav_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/margin_8"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/preview_like_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/margin_8"
            android:textSize="12sp"/>

    </LinearLayout>

    <WebView
        android:id="@+id/preview_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:scrollbars="none"/>

</LinearLayout>