<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/post_detail_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="@dimen/default_padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/post_detail_avatar"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_default_avatar"/>

        <TextView
            android:id="@+id/post_detail_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/post_item_inner_margin"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/post_detail_create_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/post_item_inner_margin"
            android:text="@string/right_now"
            android:textSize="12sp"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="@dimen/default_padding"
        android:background="#BDBDBD"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/post_detail_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_padding"
        android:lineSpacingMultiplier="1.1"
        android:text="@string/welcome_to_gg_community"
        android:textColor="@color/black"
        android:textSize="22sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/post_item_inner_margin"
        android:layout_marginBottom="@dimen/default_padding"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/post_detail_click_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post_click_count"
            android:textSize="12sp"/>
    </LinearLayout>

    <WebView
        android:id="@+id/post_detail_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="@dimen/default_padding"
        android:background="#BDBDBD"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_padding"
        android:layout_marginBottom="@dimen/default_padding"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/post_detail_node"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city_construction"
            android:textSize="12sp"/>
    </LinearLayout>
</LinearLayout>