<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingEnd="@dimen/default_padding"
    android:paddingStart="@dimen/default_padding"
    android:paddingTop="@dimen/default_padding">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/comment_avatar"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_default_avatar"/>

        <TextView
            android:id="@+id/comment_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/post_item_inner_margin"
            android:layout_toEndOf="@id/comment_avatar"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="14sp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/comment_name"
            android:layout_marginStart="@dimen/post_item_inner_margin"
            android:layout_toEndOf="@id/comment_avatar"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/comment_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/x_floor"
                android:textSize="12sp"/>

            <TextView
                android:id="@+id/comment_create_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/post_item_inner_margin"
                android:text="@string/right_now"
                android:textSize="12sp"/>
        </LinearLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/comment_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_padding"
        android:lineSpacingMultiplier="1.1"
        android:text="@string/welcome_to_gg_community"
        android:textColor="@color/black"
        android:textSize="16sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="@dimen/default_padding"
        android:background="#BDBDBD"/>
</LinearLayout>